<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fullRecipeFragment"
    tools:context=".fragments.FullRecipeFragment">

    <LinearLayout
        android:showDividers="middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/cookTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voiceRecognitionSwitch" />

            <ImageView
                android:id="@+id/clock1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
...
            app:layout_constraintTop_toBottomOf="@+id/RatingRow" />

        ]]>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/opinionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
