...
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/sym_def_app_icon" />

                    <TextView
                        android:id="@+id/UsernameDisplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="TESTTTT"
                        app:autoSizeTextType="uniform"
...
