...
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal"
                android:visibility="gone"
                style="?android:buttonBarStyle"
                app:layout_constraintBottom_toTopOf="@+id/miniaturesOnlineList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchBar"
                android:weightSum="5">

                <Button
...
