...
    <string name="RateButton">Rate me !</string>
    <string name="RateText">How many stars would you give to the recipe ?</string>
    <string name="sendRate">Send rate</string>
    <string name="Rate">Rate</string>
    <string name="add_a_comment">(Optional) Add a comment</string>

    <string name="VoiceRecognitionSwitch">Voice Recognition</string>
    <string name="commandPrevious">previous</string>
    <string name="commandNext">next</string>


    <string name="users">users</string>
    <string name="user_picture">user picture</string>
...
